# tutorial_challenge

./: Cargo.toml  Readme.md
.fleet/: run.json  settings.json
src/: async_await.rs  avoid_allocations.rs  builder_pattern.rs  custom_error.rs  from_into.rs  function_arguments.rs  generics_example.rs  into_iterator.rs  into_iterator2.rs  iterating_options.rs  json_results.rs  lib.rs  lifetime_demo.rs  macros.rs  macros2.rs  macros3.rs  macros4.rs  main.rs  map_combinators.rs  match_guards.rs  message_passing.rs  mutex.rs  passing_closures.rs  slices.rs  smart_pointers.rs  threads.rs  type_state.rs  type_state2.rs  user_input.rs  various_challanges.rs
